# loci-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  memmap_xram_mia.ld  memmap_xram_mia_xip.ld
src/fatfs/: README.md  ffconf.h
src/mia/: locifw_version.h.in  main.c  main.h  tusb_config.h
src/mia/api/: api.c  api.h  dir.c  dir.h  mnt.c  mnt.h  oem.c  std.c
src/mia/mon/: fil.c  hlp.c  mon.c  ram.c  rom.c  rom.h  set.c  vip.c
src/mia/oric/: acia.c  acia.h  dsk.c  dsk.h  font_abus.h  font_abus.pl  map.c  map.h  rom.c  rom.h  tap.c  tap.h  ula.c  ula.h
src/mia/sys/: .font_rot.pl.swp  adj.c  adj.h  aut.c  aut.h  cfg.c  cfg.h  com.c  cpu.c  ext.c  ext.h  font.h  font_rot.h  font_rot.pl  font_ssd.h  font_ssd.pl  font_ssd_rot.h  led.c  led.h  lfs.c  lfs.h  mem.c  mem.h  mia.c  mia.h  mia.pio  pix.c  pix.h  pwr.c  pwr.h  ssd.c  ssd.h  sys.c  sys.h  vga.c
src/mia/usb/: cdc.c  cdc.h  kbd.c  kbd_dan.h  msc.c  msc.h  usb.c  usb.h
